--- a/partials/_modal-afterwork.html
+++ b/partials/_modal-afterwork.html
@@ -3,7 +3,7 @@
   <div class="popUpContainer">
     <header>
       <a href="#!" class="closePopUp">X</a>
-      <h2><small>After Work | Four Futures</small></h2>
+      <h2><small>After Work</small></h2>
     </header>
     <article class="modal-text">
       <p>Before you design the future, please watch:</p>
