--- a/templates/5easysteps.html
+++ b/templates/5easysteps.html
@@ -25,11 +25,8 @@
   <!--START: MAIN CONTENT-->
   <div class="container main-content">
     <div class="row header">
-      <!--main content header-->
-      <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
-        <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
-      </div>
-      <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2">
         <h1 class="title">How to Make Yourself Into A Commissioning Body in 5 Easy Steps<br/><small><i class="fa fa-download" aria-hidden="true"></i> workbook + scantron</small></h1>
       </div>
     </div>
@@ -45,6 +42,7 @@
         <span><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Scantron</span>
       </div>
     </div>
+    @@include('../partials/_footer.html')
   </div>
   <!--END: MAIN CONTENT-->
 
