--- a/templates/afterwork.html
+++ b/templates/afterwork.html
@@ -2,22 +2,22 @@
 <html lang="en" class="no-js">
 <head>
     <meta charset="UTF-8">
-    <title>After Work | Four Futures</title>
+    <title>After Work | Anxious to Make</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="no-cache">
     <meta http-equiv="Pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
-    <meta name='description' content="After Work | Four Futures">
+    <meta name='description' content="After Work">
     <meta name='keywords' content='capitalism, neoliberalism, accelerationism, work, labor, digital labor, immaterial labor, post-work'>
     
     <!-- Open Graph data -->
     <meta property="og:title" content="WWWORK" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://www.anxioustomake.ga/wwwork.html" />
-    <meta property="og:image" content="http://anxioustomake.ga/img/meta-wwwork.jpg" />
-    <meta property="og:description" content="After Work | Four Futures" /> 
+    <meta property="og:url" content="http://www.anxioustomake.ga/afterwork.html" />
+    <meta property="og:image" content="http://anxioustomake.ga/img/meta-afterwork.jpg" />
+    <meta property="og:description" content="After Work" /> 
     <meta property="og:site_name" content="Anxious to Make" />
     <meta property="fb:admins" content="753667636" />
 
@@ -25,30 +25,40 @@
     <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
     <meta name="twitter:site" content="@anxioustomake" />
     <meta name="twitter:title" content="WWWORK">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-wwwork.jpg">
+    <meta name="twitter:description" content="After Work">
+    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-afterwork.jpg">
 
   @@include('../partials/_css.html')
-    <link rel="stylesheet" type="text/css" href="css/sweepstakes.css">
 
  </head>
 
-<body>
+<body class="commission">
   @@include('../partials/_contact.html')
   @@include('../partials/_about.html')
   @@include('../partials/_nav.html')
   @@include('../partials/_header.html')
-  
-<!--START: MAIN CONTENT-->
-<div class="container dolphin-container">    
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/222723623?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-  <p>After watching, design <a href="futuregenerator.html">the future</a>.</p>
-</div>
+<!--START: MAIN CONTENT-->   
+<div class="container main-content">  
+  <div class="row">
+    <div class="col-xs-12">
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>After Work</em></h1>
+    </div>
+    <div class="col-xs-12">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/222723623?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <br/>
+      <h1 class="title">Description</h1>
+      <p>Two specters are haunting earth in the 21st-century: ecological catastrophe and technological automation. Taken to their logical extremes, these twin anxieties will drive the end of capitalism. What are the implications of artificial intelligence, automation, and the future of work?</p>
+      <p>This video draws adapted text from social critic Peter Frase's 2016 book, Four Futures, and archival footage from the Prelinger Archives, to form a speculative exercise in social science fiction.</p>
+      <p>The video is often screened during an ideation workshop that helps tech and civic workers reimagine “sharing" platforms and design cooperative solutions for the post-carbon, post-capitalist future. After watching the video, participants <a href="futuregenerator.html">design the future</a>.</p>
+    </div>
+  </div><!--end row-->
+@@include('../partials/_footer.html')
+</div> <!--end container--> 
 <!--END: MAIN CONTENT-->
 
-    @@include('../partials/_js.html')
+@@include('../partials/_js.html')
    
 </body>
 </html>
