--- a/templates/commissions.html
+++ b/templates/commissions.html
@@ -21,9 +21,12 @@
 @@include('../partials/_header.html')
 
     <!--START: MAIN CONTENT-->
-    <div class="container">
+    <div class="container main-content">
         <div class="row">
-          <h1 class="title">Our Commissions</h1>
+          <div class="col-xs-12">
+          <h1 class="title shake-slow shake-constant shake-constant--hover"><span class="negative">Our Commissions</span></h1>
+          </div>
+          <br/>
           <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="afterwork.html">
             <img src="img/document.jpg" class="img-responsive" alt="WWWORK"><span>After Work</span></a>
@@ -97,6 +100,7 @@
             <img src="img/document.jpg" class="img-responsive" alt="Fuck Labor. Write Scripts, Commission Animals"><span>Fuck Labor. Write Scripts, Commission Animals</span></a>
           </div>   
         </div>
+@@include('../partials/_footer.html')
     </div>
     <!--END: MAIN CONTENT-->
 
