--- a/templates/dolphinaccelerator.html
+++ b/templates/dolphinaccelerator.html
@@ -30,26 +30,34 @@
     <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-dolphin2.jpg">
 
   @@include('../partials/_css.html')
-    <link rel="stylesheet" type="text/css" href="css/sweepstakes.css">
 
  </head>
 
-<body>
+<body class="commission">
   @@include('../partials/_contact.html')
   @@include('../partials/_about.html')
   @@include('../partials/_nav.html')
   @@include('../partials/_header.html')
-  
-<!--START: MAIN CONTENT-->
-<div class="container dolphin-container">    
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/186337332?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-  <p><em>Dolphin Accelerator</em> was commissioned by Temporary Art Review for <a href="http://commonfield.org/convenings/2016" target="_blank">Common Field Convening 2016 | Miami</a> from October 23-25, 2016. The project was embedded in an essay by theorist and curator Joshua Simon published on <a href="http://temporaryartreview.com/the-dual-power-of-arts-organizations/" target="_blank">temporaryartreview.com</a> and on <a href="http://commonfield.org/projects" target="_blank">Common Field | Research</a> and was part of a broader segment on the impacts of accelerated capitalism.</p>
-</div>
-<!--END: MAIN CONTENT-->
 
-    @@include('../partials/_js.html')
+<!--START: MAIN CONTENT-->   
+<div class="container main-content">  
+  <div class="row">
+    <div class="col-xs-12">
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Dolphin Accelerator</em></h1>
+    </div>
+    <div class="col-xs-12">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/186337332?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <h1 class="title">Description</h1>
+      <p><em>Dolphin Accelerator</em> was commissioned by Temporary Art Review for <a href="http://commonfield.org/convenings/2016" target="_blank">Common Field Convening 2016 | Miami</a> from October 23-25, 2016. The project was embedded in an essay by theorist and curator Joshua Simon published on <a href="http://temporaryartreview.com/the-dual-power-of-arts-organizations/" target="_blank">temporaryartreview.com</a> and on <a href="http://commonfield.org/projects" target="_blank">Common Field | Research</a> and was part of a broader segment on the impacts of accelerated capitalism.</p>
+    </div>
+  </div><!--end row-->
+  @@include('../partials/_footer.html')
+</div> <!--end container--> 
+<!--END: MAIN CONTENT-->
+  
+@@include('../partials/_js.html')
    
 </body>
 </html>
