--- a/templates/futuregenerator.html
+++ b/templates/futuregenerator.html
@@ -25,16 +25,18 @@
 <!--START: MAIN CONTENT-->
 <div class="generator-container">
 <div class="future"></div>
-<button class="makefuture">GENERATE A FUTURE</button>   
+<button class="makefuture">GENERATE A FUTURE</button>
+@@include('../partials/_footer.html')
 </div>
-<div class="more-info-bottom-left"><a href="#afterwork-modal"><img src="img/info.gif"></a></div>
-<div id="love-me">
+
+<div class="more-info-bottom-left"><a href="#afterwork-modal"><img class="baby-dollar" src="img/dollar140px.gif"></a></div>
+<!-- <div id="love-me">
   <marquee direction="down" width="100%" height="100%" behavior="alternate">
     <marquee behavior="alternate">
       <div><img src="img/dollar140px.gif" alt=""></div>
     </marquee>
   </marquee>
-</div>
+</div> -->
 <!--END: MAIN CONTENT-->
 
 
