--- a/templates/futureofwork.html
+++ b/templates/futureofwork.html
@@ -2,16 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>The Future of Work Testimonials</title>
+  <title>The Future of Work Testimonials | Anxious to Make</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Cache-control" content="public">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="author" content="Liat Berdugo and Emily Martinez">
-  <meta name='description' content='The Future of Work Testimonials'>
+  <meta name='description' content='The Future of Work Testimonials: Testimonial actors answer questions about jobs, the sharing economy, and the future of work.'>
   <meta name='keywords' content='automation, future of work, sharing economy, mass unemployment, basic income, testimonials'>
   
-@@include('../partials/_social.html')
+  <!-- Open Graph data -->
+  <meta property="og:title" content="Anxious to Make" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="http://www.anxioustomake.ga/" />
+  <meta property="og:image" content="http://anxioustomake.ga/img/meta-futureofwork.jpg" />
+  <meta property="og:description" content='The Future of Work Testimonials: Testimonial actors answer questions about jobs, the sharing economy, and the future of work.' /> 
+  <meta property="og:site_name" content="Anxious to Make" />
+  <meta property="fb:admins" content="753667636" />
+
+  <!--Twitter Meta-->
+  <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
+  <meta name="twitter:site" content="@anxioustomake" />
+  <meta name="twitter:title" content="Anxious to Make">
+  <meta name="twitter:description" content='The Future of Work Testimonials: Testimonial actors answer questions about jobs, the sharing economy, and the future of work.'>
+  <meta name="twitter:creator" content="@anxioustomake ">
+  <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-futureofwork.jpg">
 @@include('../partials/_css.html')
 </head>
 
@@ -27,7 +42,7 @@
   <div class="row">
     <!--main content header-->
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-      <h1 class="pageheading shake-slow shake-constant">The Future of Work, Testimonials</h1>
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>The Future of Work Testimonials</em></h1>
     </div>
     <!-- <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
       <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
@@ -43,6 +58,8 @@
         <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/163223022?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
+        <br/>
+        <h1 class="title">Description</h1>
         <p><em>The Future of Work Testimonials</em> were commissioned from "testimonial actors" on Fiverr.com. 
         <br/></br/>
         Testimonial actors are actors whose role it is to perform "authentic" testimonials about a product or service. In the majority of cases, these are products or services they have never used. Testimonial actors are accustomed to working with scripts. Rarely do they contribute their own thoughts or opinions about the things they are reviewing.
@@ -70,10 +87,9 @@
         </div>
         <p class="credit">Commissioned from: <a href="https://www.fiverr.com/yourspokesguy" target="_blank">I will create a natural URBAN testimonial on webcam in 48 Hours</a>, <a href="https://www.fiverr.com/tgraham828" target="_blank">I will create a natural business review</a>, <a href="https://www.fiverr.com/ssgtstinnett">   
         I will create a testimonial video as an American Male Military War Veteran</a>, <a href="https://www.fiverr.com/mayvin" target="_blank">I will produce a high quality video with my family</a>, <a href="https://www.fiverr.com/marcossama">I will video testimonial English latin accent or spanish</a>, <a href="https://www.fiverr.com/socialimpact" target="_blank">I will be your video spokeperson for your business in my car</a>, <a href="https://www.fiverr.com/bradfordjet" target="_blank">I will professionally do a video testimonial</a>, <a href="https://www.fiverr.com/lawrenceiscool" target="_blank">I will record a sloppy and UNPROFESSIONAL Testimonial</a>, <a href="https://www.fiverr.com/ashwanithakur" target="_blank">I will do Realistic and Unprofessional Testimonial</a>, <a href="https://www.fiverr.com/jhorn1177" target="_blank">I will be a believable and trustworthy Spokesperson for your cause</a>, <a href="https://www.fiverr.com/ivanalexx" target="_blank">I will record the PERFECT Video Testimonial</a></p>
-    </div>
-
-  
+    </div>  
   </div><!--end row-->
+  @@include('../partials/_footer.html')
 </div><!--end container-->
 <!--END: MAIN CONTENT-->
 
