--- a/templates/importantthings.html
+++ b/templates/importantthings.html
@@ -23,6 +23,7 @@
 @@include('../partials/_header.html')
 
     <!--START: MAIN CONTENT-->
+<div class="main-content">  
     <div class="whatdoyoucareabout">
       <h1>What is most important to you?</h1> 
       <h2>Choose one:</h2>
@@ -55,6 +56,8 @@
     <div class="newproject"></div>
     <button class="makeart">GENERATE A NEW PROJECT</button>   
     <!--END: MAIN CONTENT-->
+    @@include('../partials/_footer.html')
+</div>   
 
 @@include('../partials/_js.html')
 <script type="text/javascript" src="js/mediums.json"></script>
