--- a/templates/moneyquiz.html
+++ b/templates/moneyquiz.html
@@ -567,7 +567,7 @@
                 <button class="ci-nav" path="slide-75">Yes, like a heart attack.</button>
                 <button class="ci-nav" path="slide-76">No, a spiritual death.</button>
                 <!-- <button class="ci-nav" path="slide-77">Only if the suicide net "fails".</button> -->
-                <button class="ci-nav" path="slide-78">No &ndash; I mean not being able-bodied enough to work for the duration of my lifetime &ndash; not having sufficient resources or support to sustain my disabled or aging body's existence. &ndash; death from exhaustion.</button>
+                <button class="ci-nav" path="slide-78">No, I mean not being able-bodied enough to work for the duration of my lifetime.</button>
                 <button class="ci-nav prev" path="slide-4"></button>
             </div>
 
@@ -670,6 +670,7 @@
             </div> 
 
         </div><!--end ci-->
+        @@include('../partials/_footer.html')
     </div><!--end ci-wrap-->
 
   <!--END: MAIN CONTENT-->
