--- a/templates/nevertalkaboutyourworkagain.html
+++ b/templates/nevertalkaboutyourworkagain.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anxious to Never Have to Talk About Your Work Again</title>
+    <title>Anxious to Never Have to Talk About Your Work Again | Anxious to Make</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,55 +25,54 @@
   <!--START: MAIN CONTENT-->
   <div class="container main-content">
     <div class="row">
-      <!--main content header-->
-      <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
+        <div class="col-xs-12 col-sm-8">
+          <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Commission a Human Billboard to Talk About Your Work</em></h1>
+        </div>
+        <div class="hidden-xs col-sm-4">
         <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
       </div>
-      <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-        <h1 class="pageheading">Commission a Human Billboard to Talk About Your Work</h1>
-      </div>
-    </div>  
+    </div>
+ 
     <div class="row">
-
-        <!--script or text goes here-->
-        <div class="col-xs-12 col-sm-4 col-md-4">
-            <p class="title">Never talk about your work again</p>
-            <div class="clipvertical-wrapper">
-            <div class="clipvertical">    
-                <p class="script">SCRIPT<br/><br/>This artwork is about the sharing economy
-                </p>
-            </div>  
-            </div> 
-            <p class="credit">Commissioned from: <a href="https://www.fiverr.com/ale_brasil/write-your-message-on-my-tummy" target="_blank">I will write your message on my tummy</a></p>
-        </div>
-
-        <!--sample goes here-->
-        <div class="col-xs-12 col-sm-8">
+      <div class="col-xs-12 col-sm-8">
+        <div class="row">
+          <div class="col-xs-12">
             <h1 class="title">Here is ours</h1>
             <img src="img/humanbillboard.jpg" class="img-responsive">      
-        </div>
-
-        <!--three additional examples go here-->
-        <div class="col-xs-12 col-sm-8">
+          </div>
+          <div class="col-xs-12">
             <h1 class="title">Make Your Own</h1>
             <div class="row">
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/caegirl/write-your-message-on-my-feet" target="_blank">I will write your message on my feet</a>
-                </div>
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/bwayne212/write-anything-you-want-on-my-six-pack-abs" target="_blank">I will write anything on an ab models six pack</a>
-                </div>
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/crystalife/write-and-draw-anything-on-face-in-24-hours" target="_blank">I will write and draw anything on my face in 24 HOURS</a>
-                </div>
+              <div class="col-xs-12 col-sm-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/caegirl/write-your-message-on-my-feet" target="_blank">I will write your message on my feet</a>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/bwayne212/write-anything-you-want-on-my-six-pack-abs" target="_blank">I will write anything on an ab models six pack</a>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/crystalife/write-and-draw-anything-on-face-in-24-hours" target="_blank">I will write and draw anything on my face in 24 HOURS</a>
+              </div>
             </div>
-        </div>  
-  
-        </div><!--end container-->
-    </div><!--end row-->
+          </div>
+        </div>
+      </div>  
+      <div class="col-xs-12 col-sm-4">
+        <p class="title">Never talk about your work again</p>
+        <div class="clipvertical-wrapper">
+            <div class="clipvertical">    
+                <p class="script">SCRIPT<br/><br/>This artwork is about the sharing economy
+                <br/><br/><br/><br/><br/><br/><br/><br/><br/>
+                </p>
+            </div>  
+        </div> 
+        <p class="credit">Commissioned from: <a href="https://www.fiverr.com/ale_brasil/write-your-message-on-my-tummy" target="_blank">I will write your message on my tummy</a></p>
+      </div>
+    </div><!--end row-->  
+  @@include('../partials/_footer.html')    
+  </div><!--end container-->
 
 <!--END: MAIN CONTENT-->
 
