--- a/templates/projectgenerator.html
+++ b/templates/projectgenerator.html
@@ -24,11 +24,16 @@
 @@include('../partials/_header.html')
 
   <!--START: MAIN CONTENT-->
-  <div class="generator-container">
-    <div class="newproject"></div>
-    <button class="makeart">GENERATE A NEW PROJECT</button>   
+  <div class="special-container">
+    <div class="generator-container">
+      <div class="newproject"></div>
+      <button class="makeart">GENERATE A NEW PROJECT</button>   
+    </div>
+    @@include('../partials/_footer.html')
   </div>
   <!--END: MAIN CONTENT-->
+
+
 
   @@include('../partials/_js.html')
   <script type="text/javascript" src="js/mediums.json"></script>
