--- a/templates/quitting.html
+++ b/templates/quitting.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
-    <meta name='description' content="Quitting">
+    <meta name='description' content="Quitting: features videotaped workers that were paid to “quit” their temporary jobs of acting as spokespeople for the video.">
     <meta name='keywords' content='capitalism, work, labor, digital labor, immaterial labor, gig economy'>
     
     <!-- Open Graph data -->
@@ -17,7 +17,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://www.anxioustomake.ga/quitting.html" />
     <meta property="og:image" content="http://anxioustomake.ga/img/meta-quitting.jpg" />
-    <meta property="og:description" content="Quitting" /> 
+    <meta property="og:description" content="Quitting: features videotaped workers that were paid to “quit” their temporary jobs of acting as spokespeople for the video." /> 
     <meta property="og:site_name" content="Anxious to Make" />
     <meta property="fb:admins" content="753667636" />
 
@@ -25,31 +25,42 @@
     <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
     <meta name="twitter:site" content="@anxioustomake" />
     <meta name="twitter:title" content="Quitting">
-    <meta name="twitter:description" content="Quitting">
+    <meta name="twitter:description" content="Quitting: features videotaped workers that were paid to “quit” their temporary jobs of acting as spokespeople for the video.">
     <meta name="twitter:creator" content="@anxioustomake">
     <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-quitting.jpg">
 
   @@include('../partials/_css.html')
-    <link rel="stylesheet" type="text/css" href="css/sweepstakes.css">
-
  </head>
 
-<body>
+<body class="commission">
   @@include('../partials/_contact.html')
   @@include('../partials/_about.html')
   @@include('../partials/_nav.html')
   @@include('../partials/_header.html')
   
-<!--START: MAIN CONTENT-->
-<div class="container dolphin-container">    
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/200595854?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-  <p></p>
-</div>
+<!--START: MAIN CONTENT-->   
+<div class="container main-content">  
+  <div class="row">
+    <div class="col-xs-12">
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Quitting</em></h1>
+    </div>
+    <div class="col-xs-12">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/200595854?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <br/>
+      <h1 class="title">Summary</h1>
+      <p><em>Quitting</em> consists of a roped-off portion of an exhibition, where viewers may not enter personally: only hired gig-workers from the sharing economy are allowed to view this work. Behind the roped-off portion of the exhibition lies a single-channel video, depicting hired spokespeople from the gig-platform and digital marketplace Fiverr.com. These videotaped workers were paid to “quit” their temporary jobs of acting as spokespeople for the video. Viewers wishing to see this video must hire a gig worker from sharing economy sites like TaskRabbit.com to come to the show in-person and share the work via remote viewing technologies such as video chat, Periscope, FaceTime, etc.</p>
+      <h1 class="title">Description</h1>
+      <p><em>Quitting</em> speaks to the theme of hierarchies and invisible labour. As economists and scientists of the sharing economy admit, "we don't openly force or manipulate people today," instead we allow economic factors to invisibilized labor. This invisibilization can take many forms. Labor can be invisible because it is disembodied and digital (for instance, the creative workers in <em>Quitting</em>’s video portion are all from the digital economy). Or, labor can be invisible because of the virtualization and monetization of social relations (for instance, <em>Quitting</em> requires a monetized relation with a worker, who is hierarchically ranked as lower status than that of the viewer). <em>Quitting</em> offers an opportunity to examine the results of a flexible, mobile, and virtual workforce &endash; and the disembodied labor, invisible labor, and stratified hierarchies that accompany it.</p> 
+      <p>Finally, the work of <em>Quitting</em> is to bring the visible architecture and infrastructures back into view in the face of this invisible, digital, and freelance labor. <em>Quitting</em> is set up as an installation piece that is blocked from view until a worker is hired. This means that, to see <em>Quitting</em>, a viewer will have to hire someone to look at it for them — or get hired out by someone else. In this way, the work engages with the physical hierarchies and themes of “private access” and “VIP lines.” The motivations are, as one <a href="https://ww2.kqed.org/arts/2016/11/15/art-for-the-new-economy-where-everyones-got-a-side-gig/" target="_blank">Sarah Hotchkiss (KQED)</a> wrote of <em>Quitting</em> “...if you can outsource your laundry, why not outsource your aesthetic experiences? Welcome to the new world order, folks”.</p> 
+    </div>
+  </div><!--end row-->
+@@include('../partials/_footer.html')
+</div> <!--end container--> 
 <!--END: MAIN CONTENT-->
 
-    @@include('../partials/_js.html')
+@@include('../partials/_js.html')
    
 </body>
 </html>
