--- a/templates/twins.html
+++ b/templates/twins.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anxious to Step Out of Your Comfort Zone</title>
+    <title>Five Twins  | Anxious to Make</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,17 +25,42 @@
   <!--START: MAIN CONTENT-->
   <div class="container main-content">
     <div class="row">
-      <!--main content header-->
-      <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
+        <div class="col-xs-12 col-sm-8">
+          <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Commission a Performance for Personas Outside of Comfort Zone</em></h1>
+        </div>
+        <div class="hidden-xs col-sm-4">
         <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
-      </div>
-      <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-        <h1 class="pageheading">Commission a Performance of Roles or Personas Outside of Comfort Zone</h1>
       </div>
     </div>
     <div class="row">
-        <!--script or text goes here-->
-        <div class="col-xs-12 col-sm-4 col-md-4">
+        <div class="col-xs-12 col-sm-8">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1 class="title">Watch ours!</h1>
+                    <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/154158545?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>       
+                </div>
+                <div class="col-xs-12">
+                    <h1 class="title">Make Your Own</h1>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-4">
+                            <span class="recommendation">We recommend:<br/></span> 
+                            <a href="https://www.fiverr.com/theadtwins/create-a-promotional-video-featuring-twins" target="_blank">I will create a promotional video featuring twins</a>
+                        </div>
+                        <div class="col-xs-12 col-sm-4">
+                            <span class="recommendation">We recommend:<br/></span> 
+                            <a href="https://www.fiverr.com/ashwanithakur/create-a-special-promotional-video-featuring-twins" target="_blank">I will create a Special Promotional Video featuring TWINS</a>
+                        </div>
+                        <div class="col-xs-12 col-sm-4">
+                            <span class="recommendation">We recommend:<br/></span> 
+                            <a href="https://www.fiverr.com/roberthess/get-australian-twins-to-read-out-your-message" target="_blank">I will get Australian twins to read out your message</a>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4">
             <p class="title">Write scripts</p>
             <div class="clipvertical-wrapper">
             <div class="clipvertical">    
@@ -187,35 +212,9 @@
             </div>
             <p class="credit">Commissioned from: <a href="https://www.fiverr.com/theadtwins/create-a-promotional-video-featuring-twins" target="_blank">I will create a promotional video featuring twins</a> and <a href="https://www.fiverr.com/ashwanithakur/create-a-special-promotional-video-featuring-twins" target="_blank">I will create a Special Promotional Video featuring TWINS</a> and <a href="https://www.fiverr.com/roberthess/get-australian-twins-to-read-out-your-message" target="_blank">I will get Australian twins to read out your message</a></p>
         </div>
-
-        <!--sample goes here-->
-        <div class="col-xs-12 col-sm-8">
-            <h1 class="title">Watch ours!</h1>
-            <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/154158545?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>       
-        </div>
-
-        <!--three additional examples go here-->
-        <div class="col-xs-12 col-sm-8">
-            <h1 class="title">Make Your Own</h1>
-            <div class="row">
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/theadtwins/create-a-promotional-video-featuring-twins" target="_blank">I will create a promotional video featuring twins</a>
-                </div>
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/ashwanithakur/create-a-special-promotional-video-featuring-twins" target="_blank">I will create a Special Promotional Video featuring TWINS</a>
-                </div>
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/roberthess/get-australian-twins-to-read-out-your-message" target="_blank">I will get Australian twins to read out your message</a>
-                </div>
-            </div>
-        </div>  
         
     </div><!--end row-->
+    @@include('../partials/_footer.html')
 </div><!--end container-->
 <!--END: MAIN CONTENT-->
 
