--- a/templates/wwwork.html
+++ b/templates/wwwork.html
@@ -30,26 +30,35 @@
     <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-wwwork.jpg">
 
   @@include('../partials/_css.html')
-    <link rel="stylesheet" type="text/css" href="css/sweepstakes.css">
 
  </head>
 
-<body>
+<body class="commission">
   @@include('../partials/_contact.html')
   @@include('../partials/_about.html')
   @@include('../partials/_nav.html')
   @@include('../partials/_header.html')
   
-<!--START: MAIN CONTENT-->
-<div class="container dolphin-container">    
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/202841346?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-  <p><em>WWWork</em> is a video essay about the relationship of art and work as practiced within a globally networked society. The project considers: the commodification of creativity and the the role of the artist, the effects of immaterial labor on the body, and the influence the accelerating fragmentation of the work process has on our lives and our ability to enact social and political change. WWWork is composed from 100% unoriginal content, consisting of stock photography, iMovie trailer music, found footage, and outsourced performances remixed from critical texts by Franco Berardi, Lars Bang Larsen, Michele Masucci, Sarat Maharaj, OTCOP, Nina Power, Raqs Media Collective, and Hito Steyerl.</p>
-</div>
+<!--START: MAIN CONTENT-->   
+<div class="container main-content">  
+  <div class="row">
+    <div class="col-xs-12">
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>WWWORK</em></h1>
+    </div>
+    <div class="col-xs-12">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/202841346?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <br/>
+      <h1 class="title">Description</h1>
+      <p><em>WWWork</em> is a video essay about the relationship of art and work as practiced within a globally networked society. The project considers: the commodification of creativity and the the role of the artist, the effects of immaterial labor on the body, and the influence the accelerating fragmentation of the work process has on our lives and our ability to enact social and political change. WWWork is composed from 100% unoriginal content, consisting of stock photography, iMovie trailer music, found footage, and outsourced performances remixed from critical texts by Franco Berardi, Lars Bang Larsen, Michele Masucci, Sarat Maharaj, OTCOP, Nina Power, Raqs Media Collective, and Hito Steyerl.</p>
+    </div>
+  </div><!--end row-->
+@@include('../partials/_footer.html')
+</div> <!--end container--> 
 <!--END: MAIN CONTENT-->
 
-    @@include('../partials/_js.html')
+@@include('../partials/_js.html')
    
 </body>
 </html>
