--- a/css/sweepstakes.css
+++ b/css/sweepstakes.css
@@ -10,10 +10,17 @@
   margin-top: 40px;
 }
 .dolphin-container {
-  margin-top: 60px;
+  margin-top: 30px;
+  min-height:97%;
+  position:relative;
 }
+
 .dolphin-container h1{
+  color: #fff;
+}
+.dolphin-container h2{
   color: #FF0179;
+  font-size: 28px;
 }
 .sweepstakes-container h3,
 .dolphin-container h3{
