--- a/templates/downloads.html
+++ b/templates/downloads.html
@@ -22,9 +22,9 @@
 @@include('../partials/_header.html')
 
     <!--START: MAIN CONTENT-->
-    <div class="container">
+    <div class="container main-content">
         <div class="row">
-          <h1 class="title">Our Downloads</h1>
+          <h1 class="title shake-slow shake-constant shake-constant--hover"><span class="negative">Our Downloads</span></h1>
           <div class="col-xs-12 col-sm-4 col-md-4 download">
             <a href="5easysteps.html">
             <img src="img/download-makeyourself.jpg" class="img-responsive" alt="How to Make Yourself Into A Commissioning Body in 5 Easy Steps Workbook"></a>
@@ -41,6 +41,7 @@
             <span>Contract for Audience of One</span>
           </div>  
         </div>
+@@include('../partials/_footer.html')
     </div>
     <!--END: MAIN CONTENT-->
 
