--- a/templates/externalizedistrust.html
+++ b/templates/externalizedistrust.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Anxious to Externalize Distrust</title>
+  <title>Externalize Distrust | Anxious to Make</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Cache-control" content="public">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,70 +25,71 @@
 <!--START: MAIN CONTENT-->
 <div class="container main-content">
   <div class="row">
-    <!--main content header-->
-    <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
-      <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
+    <div class="col-xs-12 col-sm-8">
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Commission a Performance to Externalize Distrust</em></h1>
     </div>
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-      <h1 class="pageheading">Commission a Performance to Externalize Distrust</h1>
+      <div class="hidden-xs col-sm-4">
+      <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
     </div>
   </div>
 
   <div class="row">  
-    <!--script or text goes here-->
-    <div class="col-xs-12 col-sm-4 col-md-4">
-        <p class="title">Script</p>
-        <div class="clipvertical-wrapper">
-        <div class="clipvertical">    
-            <p class="script">Varun: Hello. I am your distrust in capitalism!
-                <br/><br/>
-                Khalun: And hello, I am your distrust in your own intuition. 
-                <br/><br/>
-                SAY TOGETHER: We live here, in this living room, together. We live outside of you.
-                <br/><br/>
-                Varun: We live in India. We cannot hug or get close to each other, don’t ask why!!!
-                <br/><br/>
-                Khalun: Yeah. We cannot hug or get close to each other, don’t ask why.
-                <br/><br/>
-                Varun: But the point is, we are externalized now.
-                <br/><br/>
-                Khalun: We are outside of you. 
-                <br/><br/>
-                SAY TOGETHER: Bye!
-                <br/><br/>
-                [Both wave goodbye to the camera]
-            </p>
-        </div>   
+    <div class="col-xs-12 col-sm-8">
+      <div class="row"> 
+        <div class="col-xs-12">
+          <h1 class="title">Watch ours!</h1>
+          <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153587609?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>       
         </div>
-        <p class="credit">Commissioned from: <a href="https://www.fiverr.com/varun_karkhanis/make-varun-and-khalun-say-whatever-you-want" target="_blank">I will make twins say whatever you want</a></p>
-    </div>
-    <!--sample goes here-->
-    <div class="col-xs-12 col-sm-8 col-md-8">
-        <h1 class="title">Watch ours!</h1>
-        <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153587609?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>       
-    </div>
-    <!--three additional examples go here-->
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-        <h1 class="title">Make Your Own</h1>
-        <div class="row">  
-            <div class="col-xs-4">
+        <div class="col-xs-12">
+          <h1 class="title">Make Your Own</h1>
+          <div class="row">  
+            <div class="col-xs-12 col-sm-4">
                 <span class="recommendation">We recommend:<br/></span> 
                 <a href="https://www.fiverr.com/varun_karkhanis/do-a-eye-brow-equalizer-holding-custom-sign" target="_blank">I will create an eyebrow equalizer holding custom sign</a>
             </div>   
-            <div class="col-xs-4">
+            <div class="col-xs-12 col-sm-4">
                 <span class="recommendation">We recommend:<br/></span> 
                 <a href="https://www.fiverr.com/varun_karkhanis/say-whatever-you-want-with-my-fancy-man-costume" target="_blank">I will say whatever you want with my fancy man costume</a>
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-12 col-sm-4">
                 <span class="recommendation">We recommend:<br/></span> 
                 <a href="https://www.fiverr.com/varun_karkhanis/say-whatever-you-want-like-a-ghost-rider" target="_blank">I will say whatever you want like a Ghost Rider</a>
             </div>
+          </div>
         </div>
-    </div>  
+      </div>
+    </div>      
+    <div class="col-xs-12 col-sm-4">
+      <p class="title">Script</p>
+      <div class="clipvertical-wrapper">
+        <div class="clipvertical">    
+          <p class="script">Varun: Hello. I am your distrust in capitalism!
+              <br/><br/>
+              Khalun: And hello, I am your distrust in your own intuition. 
+              <br/><br/>
+              SAY TOGETHER: We live here, in this living room, together. We live outside of you.
+              <br/><br/>
+              Varun: We live in India. We cannot hug or get close to each other, don’t ask why!!!
+              <br/><br/>
+              Khalun: Yeah. We cannot hug or get close to each other, don’t ask why.
+              <br/><br/>
+              Varun: But the point is, we are externalized now.
+              <br/><br/>
+              Khalun: We are outside of you. 
+              <br/><br/>
+              SAY TOGETHER: Bye!
+              <br/><br/>
+              [Both wave goodbye to the camera]
+          </p>
+        </div>   
+      </div>
+      <p class="credit">Commissioned from: <a href="https://www.fiverr.com/varun_karkhanis/make-varun-and-khalun-say-whatever-you-want" target="_blank">I will make twins say whatever you want</a></p>
+    </div>
   
   </div><!--end row-->
+  @@include('../partials/_footer.html')  
 </div><!--end container-->
 <!--END: MAIN CONTENT-->
 
