--- a/templates/forecasting.html
+++ b/templates/forecasting.html
@@ -2,14 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anxious to Commission a Psychic Reading</title>
+    <title>Commission a Psychic Reading | Anxious to Make</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="author" content="Liat Berdugo and Emily Martinez">
+    <meta name="author" content="Anxious to Make">
     <meta name='description' content='Forecasting the Future of Art Practice in times of accelerated change'>
     <meta name='keywords' content='future, predictions, forecasting, psychic, capitalism'>
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Commission a Psychic Reading | Anxious to Make" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.anxioustomake.ga/forecasting.html" />
+    <meta property="og:image" content="http://anxioustomake.ga/img/meta-forecast.gif" />
+    <meta property="og:description" content='Forecasting the Future of Art Practice in times of accelerated change' /> 
+    <meta property="og:site_name" content="Anxious to Make" />
+    <meta property="fb:admins" content="753667636" />
+
+    <!--Twitter Meta-->
+    <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
+    <meta name="twitter:site" content="@anxioustomake" />
+    <meta name="twitter:title" content="Commission a Psychic Reading | Anxious to Make">
+    <meta name="twitter:description" content='Forecasting the Future of Art Practice in times of accelerated change.'>
+    <meta name="twitter:creator" content="@anxioustomake ">
+    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-forecast.gif">
     
 @@include('../partials/_social.html')
 @@include('../partials/_css.html')
@@ -23,72 +40,85 @@
 @@include('../partials/_header.html')
 
 <!--START: MAIN CONTENT-->
+
 <div class="container main-content">
-    <div class="row">
-        <!--main content header-->
-      <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
-        <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
-      </div>
-      <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-        <h1 class="pageheading">Commission a Psychic Reading</h1>
-      </div>
+  <div class="row">
+    <div class="col-xs-12 col-sm-8">
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Commission a Psychic Reading</em></h1>
     </div>
+    <div class="hidden-xs col-sm-4">
+      <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
+    </div>
+  </div>
 
-    <div class="row">  
-        <!--script or text goes here-->
-        <div class="col-xs-12 col-sm-4 col-md-4">
-            <p class="title"><strong>Future Proof Your Career</strong></p>
-            <div class="clipvertical-wrapper">
-            <div class="clipvertical">    
-            <p class="script">LETTER TO THE PSYCHIC<br/><br/>
-            Hello Psychicthe,<br/><br/>  
-            I'm an artist. I have some concerns about my career.
-            <br/><br/>
-            I'm worried that my art practice has failed to keep pace with the demands of the rapidly shifting forces that shape the economy. I've lost faith in the markets and institutions that support artists. In the private sphere, I don't have the stuff that auction houses and top tier commercial galleries dream of. And elsewhere it seems that most public or non profit institutions are either being dismantled or compromised in ways that make me believe that continuing to pursue an art career any further (I've been doing this for 20 years) is crazy and unsustainable. At the same time, I can't stop doing this &mdash; making art &mdash; I don't know what to do.
-            <br/> <br/> 
-            I just feel overwhelmed by this problem of sustainability, of becoming too vulnerable in the face of so many changes, especially as I get older. 
-            <br/> <br/> 
-            I have been wondering if I should change or diversify my practice? In other words, is there a way to "future proof" my art career so that I can stay a step ahead of the game without compromising my integrity?
-            <br/> <br/> 
-            My intuition tells me that cultivating better forecasting abilities about these unpredictable changes, both internal and external to me, would be of tremendous value. 
-            <br/> <br/> 
-            Can you help me?
-            <br/> <br/> 
-            Warmly,<br/> 
-            Emily</p>
-            </div>   
-            </div>
-            <p class="credit">Commissioned from: <a href="https://www.fiverr.com/psychicthe/provide-a-truthful-answer-to-your-question" target="_blank">I will provide a truthful audio answer to your question</a></p>
+  <div class="row">
+    <div class="col-xs-12 col-sm-8">
+      <div class="row">  
+        <div class="col-xs-12">
+          <h1 class="title">Listen to ours!</h1>
+          <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153562411?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>       
         </div>
-
-        <!--sample goes here-->
-        <div class="col-xs-12 col-sm-8 col-md-8">
-            <h1 class="title">Listen to ours!</h1>
-            <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153562411?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>       
-        </div>
-
-        <!--three additional examples go here-->
-        <div class="col-xs-12 col-sm-8 col-md-8">
-            <h1 class="title">Make Your Own</h1>
-            <div class="row">     
-                <div class="col-xs-12 col-sm-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/delaweiss/give-you-an-intuitive-psychic-reading" target="_blank">I will give you a specific intuitive psychic reading</a>
-                </div>
-                <div class="col-xs-12 col-sm-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/akashicsoul/do-a-psychic-reading-and-answer-one-question-with-detail" target="_blank">I will do a psychic reading and answer one question with detail</a>
-                </div>
-                <div class="col-xs-12 col-sm-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/indianastro/prepare-career-astrology-report-and-persosnlaity-test" target="_blank">I will prepare career astrology report and personality test</a>
-                </div>
+        <div class="col-xs-12">
+          <h1 class="title">Make Your Own</h1>
+          <div class="row">     
+            <div class="col-xs-12 col-sm-4">
+                <span class="recommendation">We recommend:<br/></span> 
+                <a href="https://www.fiverr.com/delaweiss/give-you-an-intuitive-psychic-reading" target="_blank">I will give you a specific intuitive psychic reading</a>
             </div>
-        </div>  
-
+            <div class="col-xs-12 col-sm-4">
+                <span class="recommendation">We recommend:<br/></span> 
+                <a href="https://www.fiverr.com/akashicsoul/do-a-psychic-reading-and-answer-one-question-with-detail" target="_blank">I will do a psychic reading and answer one question with detail</a>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+                <span class="recommendation">We recommend:<br/></span> 
+                <a href="https://www.fiverr.com/indianastro/prepare-career-astrology-report-and-persosnlaity-test" target="_blank">I will prepare career astrology report and personality test</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>     
+    <div class="col-xs-12 col-sm-4">
+      <p class="title"><strong>Future Proof Your Career</strong></p>
+      <div class="clipvertical-wrapper">
+      <div class="clipvertical">    
+      <p class="script">LETTER TO THE PSYCHIC<br/><br/>
+      Hello Psychicthe,<br/><br/>  
+      I'm an artist. I have some concerns about my career.
+      <br/><br/>
+      I'm worried that my art practice has failed to keep pace with the demands of the rapidly shifting forces that shape the economy.
+      <br/><br/> 
+      I've lost faith in the markets and institutions that support artists. 
+      <br/><br/>
+      In the private sphere, I don't have the stuff that auction houses and top tier commercial galleries dream of. 
+      <br/><br/>
+      And elsewhere it seems that most public or non profit institutions are either being dismantled or compromised in ways that make me believe that continuing to pursue an art career any further (I've been doing this for 20 years) is crazy and unsustainable. 
+      <br/><br/>
+      At the same time, I can't stop doing this &mdash; making art...
+      <br/><br/>
+      I don't know what to do.
+      <br/> <br/> 
+      I just feel overwhelmed by this problem of sustainability, of becoming too vulnerable in the face of so many changes, especially as I get older. 
+      <br/> <br/> 
+      I have been wondering...
+      <br/><br/>
+      Should I change or diversify my practice? 
+      <br/><br/>
+      In other words, is there a way to "future proof" my art career so that I can stay a step ahead of the game without compromising my integrity?
+      <br/> <br/> 
+      My intuition tells me that cultivating better forecasting abilities about these unpredictable changes, both internal and external to me, would be of tremendous value. 
+      <br/> <br/> 
+      Can you help me?
+      <br/> <br/> 
+      Warmly,<br/> 
+      Emily</p>
+      </div>   
+      </div>
+      <p class="credit">Commissioned from: <a href="https://www.fiverr.com/psychicthe/provide-a-truthful-answer-to-your-question" target="_blank">I will provide a truthful audio answer to your question</a></p>
+    </div> 
   </div><!--end row-->
+  @@include('../partials/_footer.html')  
 </div><!--end container-->
 <!--END: MAIN CONTENT-->
 
