--- a/templates/generators.html
+++ b/templates/generators.html
@@ -23,56 +23,50 @@
 @@include('../partials/_header.html')
 
     <!--START: MAIN CONTENT-->
-    <div class="container">
-        <div class="row">
-          <h1 class="title">Our Generators</h1>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="projectgenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Project Generator"><span>Project<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="brandgenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Brand Generator"><span>Brand<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="newidgenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="New ID Generator"><span>New ID<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="publicitygenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Publicity Generator"><span>Publicity<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="toughlovegenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Tough Love Generator"><span>Tough Love<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="confidencegenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Confidence Generator"><span>Confidence<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="mugruggenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Mug/Rug Generator"><span>Mug/Rug<br/>Generator</span></a>
-          </div> 
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="importantthings.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Value Generator"><span>More Important Art<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="futuregenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Future Generator"><span>Future<br/>Generator</span></a>
-          </div> 
-          <!-- <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="moneymakinggenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Money Making Generator"><span>Money Making<br/>Generator</span></a>
-          </div> 
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="interngenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Intern Generator"><span>Intern<br/>Generator</span></a>
-          </div> -->
+    <div class="container main-content">
+      <div class="row">
+        <h1 class="title shake-slow shake-constant shake-constant--hover"><span class="negative">Our Generators</span></h1>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="projectgenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Project Generator"><span>Project<br/>Generator</span></a>
         </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="brandgenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Brand Generator"><span>Brand<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="newidgenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="New ID Generator"><span>New ID<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="publicitygenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Publicity Generator"><span>Publicity<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="toughlovegenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Tough Love Generator"><span>Tough Love<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="confidencegenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Confidence Generator"><span>Confidence<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="mugruggenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Mug/Rug Generator"><span>Mug/Rug<br/>Generator</span></a>
+        </div> 
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="importantthings.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Value Generator"><span>More Important Art<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="futuregenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Future Generator"><span>Future<br/>Generator</span></a>
+        </div> 
+      </div>
+@@include('../partials/_footer.html')
     </div>
     <!--END: MAIN CONTENT-->
+
 
 @@include('../partials/_js.html')
   </body>
