--- a/templates/hypnosis.html
+++ b/templates/hypnosis.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anxious to Commission a Custom Hypnosis Audio Track</title>
+    <title>Commission a Custom Hypnosis Audio Track | Anxious to Make</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,8 +10,24 @@
     <meta name="author" content="Liat Berdugo and Emily Martinez">
     <meta name='description' content='Hypnosis to Engender Trust: Anxious to Make custom audio track for renewing faith in the systems that govern our lives'>
     <meta name='keywords' content='distrust, mistrust, trust, faith, intuition, hypnosis, systemic collapse'>
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Anxious to Make" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.anxioustomake.ga/hypnosis.html" />
+    <meta property="og:image" content="http://anxioustomake.ga/img/meta-hypnosis.jpg" />
+    <meta property="og:description" content='Hypnosis to Engender Trust: Anxious to Make custom audio track for renewing faith in the systems that govern our lives' /> 
+    <meta property="og:site_name" content="Anxious to Make" />
+    <meta property="fb:admins" content="753667636" />
+
+    <!--Twitter Meta-->
+    <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
+    <meta name="twitter:site" content="@anxioustomake" />
+    <meta name="twitter:title" content="Anxious to Make">
+    <meta name="twitter:description" content='Hypnosis to Engender Trust: Anxious to Make custom audio track for renewing faith in the systems that govern our lives'>
+    <meta name="twitter:creator" content="@anxioustomake ">
+    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-hypnosis.jpg">
    
-@@include('../partials/_social.html')
 @@include('../partials/_css.html')
 </head>
 
@@ -22,70 +38,79 @@
   @@include('../partials/_nav.html')
   @@include('../partials/_header.html')
 
-  <!--START: MAIN CONTENT-->
-  <div class="container main-content">
-      <div class="row">
-        <!--main content header-->
-        <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
-          <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
-        </div>
-        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-          <h1 class="pageheading">Commission a Custom Hypnosis Audio Track</h1>
-        </div>
-      </div>
-      <div class="row">
-        <!--script or text goes here-->
-        <div class="col-xs-12 col-sm-4 col-md-4">
-            <h1 class="title">Rebuild Trust</h1>
-            <div class="clipvertical-wrapper">
-            <div class="clipvertical">    
-                <p class="script">
-                LETTER TO BBMAGIC
-                <br/><br/>
-                Hello Bbmagic, 
-                <br/><br/>
-                I am an artist. I would like for this custom hypnosis track to be addressed to people with a creative practice. There seems to be growing sense of distrust in the systems that govern our lives, careers, communities, nations, planet, etc. I want this hypnosis session to engender trust, to renew our faith in all of the above. If you could begin with something like, "Hello artist, writer, poet, painter. . ." that would be great!  After that, you can address the listener as, "artist".
-                <br/><br/>
-                Let me know if you have any questions.
-                <br/><br/>
-                Thank you!<br/>
-                Emily
-                </p>
-            </div>   
-            </div>
-            <p class="credit">Commissioned from: <a href="https://www.fiverr.com/bbmagic/record-a-personalized-self-hypnosis-mp3-for-you" target="_blank">I will record a personalized self hypnosis mp3 for you</a></p>
-        </div>
+<!--START: MAIN CONTENT-->
+<div class="container main-content">
+  <div class="row">
+    <div class="col-xs-12 col-sm-8">
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Commission a Custom Hypnosis Audio Track</em></h1>
+    </div>
+      <div class="hidden-xs col-sm-4">
+      <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
+    </div>
+  </div>
 
-        <!--sample goes here-->
-        <div class="col-xs-12 col-sm-8">
+  <div class="row">
+    <div class="col-xs-12 col-sm-8">
+      <div class="row">
+        <div class="col-xs-12">
             <h1 class="title">Listen to ours!</h1>
             <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153563164?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
             <small>[skip ahead to custom section: 13:27 - 15:52]</small>      
         </div>
-
-        <!--three additional examples go here-->
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12">
             <h1 class="title">Make Your Own</h1>
             <div class="row">
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-sm-4">
                     <span class="recommendation">We recommend:<br/></span> 
                     <a href="https://www.fiverr.com/heatmalm/create-one-personalized-hypnosis-audio-file" target="_blank">I will create one personalized hypnosis audio file</a>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-sm-4">
                     <span class="recommendation">We recommend:<br/></span> 
                     <a href="https://www.fiverr.com/superioraudio/mix-your-meditation-or-hypnosis-audio" target="_blank">I will mix your Meditation or Hypnosis Audio</a>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-sm-4">
                     <span class="recommendation">We recommend:<br/></span> 
                     <a href="https://www.fiverr.com/bornfreetherapy/create-a-personalized-hypnosis-mp3" target="_blank">I will create a personalized Hypnosis MP3</a>
                 </div>
             </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <h1 class="title">Rebuild Trust</h1>
+      <div class="clipvertical-wrapper">
+        <div class="clipvertical">    
+            <p class="script">
+            LETTER TO BBMAGIC
+            <br/><br/>
+            Hello Bbmagic, 
+            <br/><br/>
+            I am an artist. 
+            <br/><br/>
+            I would like for this custom hypnosis track to be addressed to people with a creative practice. 
+            <br/><br/>
+            There seems to be growing sense of distrust in the systems that govern our lives, careers, communities, nations, planet, etc. 
+            <br/><br/>
+            I want this hypnosis session to engender trust, to renew our faith in all of the above. 
+            <br/><br/>
+            If you could begin with something like, "Hello artist, writer, poet, painter. . ." that would be great!  
+            <br/><br/>
+            After that, you can address the listener as, "artist".
+            <br/><br/>
+            Let me know if you have any questions.
+            <br/><br/>
+            Thank you!<br/>
+            Emily
+            </p>
         </div>   
-      
-      </div><!--end row-->
-    </div><!--end container-->
+      </div>
+      <p class="credit">Commissioned from: <a href="https://www.fiverr.com/bbmagic/record-a-personalized-self-hypnosis-mp3-for-you" target="_blank">I will record a personalized self hypnosis mp3 for you</a></p>
+    </div>            
+  </div><!--end row-->
+  @@include('../partials/_footer.html')  
+</div><!--end container-->
 <!--END: MAIN CONTENT-->
 
 @@include('../partials/_js.html')
