--- a/templates/index.html
+++ b/templates/index.html
@@ -72,10 +72,19 @@
   </div>
 
   <div id="eternal" class="card draggable center">
-<!--     <img class="new" src="img/new.gif"/> -->
     <em><span class="title shake-slow shake-constant">Eternal Boy Playground</span></em><br/><br/>
-    <a href="https://tttelematiccc.com/" target="_blank"><img class="img-responsive" src="img/eternal.jpg"></a><br/>
-    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>323 10th St. (at Folsom)<br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/><span class="closing smaller shake-little shake-constant shake-constant--hover"><strong>Closing Reception: Feb 2nd, 4-6pm</strong></span></small>
+    <a href="https://tttelematiccc.com/" target="_blank"><img class="img-responsive" src="img/eternal-hodl.png"></a><br/>
+    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/></small>
+  </div>
+
+  <div id="twins" class="card draggable center">
+    <em><span class="title shake-slow shake-constant">Five Twins</span></em><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>“Liat Berdugo + Emily Martinez as Five Twins” is an ongoing commission of fake twins sourced from Fiverr.com</small>
+  </div>
+
+  <div id="money" class="card draggable center internet-empire">
+    <span class="title shake-slow shake-constant"><em>Would money be<br/>all I need to succeed?</em></span><br/><br/><small>Take the <a href="moneyquiz.html">Quiz</a>!</small>
   </div>
 
   <div id="contact" class="card draggable center">
@@ -125,13 +134,13 @@
   <div id="card6" class="card draggable news">
     <div class="center"><span class="title shake-slow shake-constant">News</span></div><br/>
     <small>
+    <strong>2.2019</strong> <em>This Artwork is About the Sharing Economy</em>,  Who Does What?, <a href="http://drugo-more.hr/en/who-does-what/" target="_blank">Drugo More</a>, Rijeka, Croatia, February 14 - March 7 2019
+    <br/><br/>
+    <strong>2.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, Self as Actor: Colonising Identity, <a href="http://www.neme.org/nac/" target="_blank">NeMe Arts Centre</a>, Limassol, Cyprus, February 15 - March 25 2019
+    <br/><br/>
     <strong>1.2019</strong> <em><a href="https://www.kqed.org/arts/13849586/crypto-bros-eternal-boy-playground-anxious-to-make" target="_blank">Crypto-Bros Beware: These Artists Aren’t Buying Your Version of Utopia</a></em> review of <em>Eternal Boy Playground</em> by Blythe Sheldon, KQED Arts
     <br/><br/>
     <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://currentsnewmedia.org/festivals/currents-new-media-2019/" target="_blank">Currents New Media Festival</a>, Santa Fe, New Mexico, June 7-23 2019
-    <br/><br/>
-    <strong>1.2019</strong> <em>This Artwork is About the Sharing Economy</em>,  Who Does What?, <a href="http://drugo-more.hr/" target="_blank">Drugo More</a>, Rijeka, Croatia, February 14 - March 7 2019
-    <br/><br/>
-    <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, Self as Actor: Colonising Identity, <a href="http://www.neme.org/nac/" target="_blank">NeMe Arts Centre</a>, Limassol, Cyprus, February 15 - March 25 2019
     <br/><br/>
     <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://awmat2019.wordpress.com/" target="_blank">Alliance of Women in Media Arts and Technology</a>, University of California Santa Barbara, February 7-9 2019
     <br/><br/>
@@ -217,18 +226,18 @@
     <img class="img-responsive shake-little shake-constant" src="img/anxious-logo-www.png">
   </div>
   <div id="featured" class="mobile center">
-    <em><span class="mobile-title shake-slow shake-constant">Eternal Boy Playground</span></em><br/><br/><br/>
-    <a href="https://tttelematiccc.com/" target="_blank"><img class="img-responsive" src="img/eternal.jpg"></a><br/>
-    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>323 10th St. (at Folsom)<br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/><span class="closing shake-little shake-constant"><strong>Closing Reception: Feb 2nd, 4-6pm</strong></span></small>
+    <em><span class="title shake-slow shake-constant">Eternal Boy Playground</span></em><br/><br/>
+    <a href="https://tttelematiccc.com/" target="_blank"><img class="img-responsive" src="img/eternal-hodl.png"></a><br/>
+    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/><!-- 323 10th St. (at Folsom)<br/> -->San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/><!-- <span class="closing smaller shake-little shake-constant shake-constant--hover"><strong>Closing Reception: Feb 2nd, 4-6pm</strong></span> --></small>
   </div>
   <div id="news" class="mobile">
     <div class="center"><span class="mobile-title shake-slow shake-constant">News</span></div><br/>
     <small>
+    <strong>2.2019</strong> <em>This Artwork is About the Sharing Economy</em>,  Who Does What?, <a href="http://drugo-more.hr/en/who-does-what/" target="_blank">Drugo More</a>, Rijeka, Croatia, February 14 - March 7 2019
+    <br/><br/>
+    <strong>2.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, Self as Actor: Colonising Identity, <a href="http://www.neme.org/nac/" target="_blank">NeMe Arts Centre</a>, Limassol, Cyprus, February 15 - March 25 2019
+    <br/><br/>
     <strong>1.2019</strong> <em><a href="https://www.kqed.org/arts/13849586/crypto-bros-eternal-boy-playground-anxious-to-make" target="_blank">Crypto-Bros Beware: These Artists Aren’t Buying Your Version of Utopia</a></em> review of <em>Eternal Boy Playground</em> by Blythe Sheldon, KQED Arts
-    <br/><br/>
-    <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://currentsnewmedia.org/festivals/currents-new-media-2019/" target="_blank">Currents New Media Festival</a>, Santa Fe, New Mexico, June 7-23 2019
-    <br/><br/>
-    <strong>1.2019</strong> <em>This Artwork is About the Sharing Economy</em>,  Who Does What?, <a href="http://drugo-more.hr/" target="_blank">Drugo More</a>, Rijeka, Croatia, February 14 - March 7 2019
     <br/><br/>
     <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, Self as Actor: Colonising Identity, <a href="http://www.neme.org/nac/" target="_blank">NeMe Arts Centre</a>, Limassol, Cyprus, February 15 - March 25 2019
     <br/><br/>
