--- a/templates/malaonda.html
+++ b/templates/malaonda.html
@@ -43,16 +43,22 @@
   
 <!--START: MAIN CONTENT-->
 <div class="container dolphin-container">
-    
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/186196449?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
+  <div class="row">  
+    <div class="col-xs-12">
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Mala Onda</em></h1>
+    </div>
+    <div class="col-xs-12">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/186196449?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>  
 
   <!-- SURVIVE CAPITALISM FORM -->
   <div class="row">    
     <form id ="gform" onsubmit="return checkForm(this);" method="POST" action="https://script.google.com/macros/s/AKfycbzvlP8jHKaFPRc9xsyKlhJ11GQGh4OnH2Rf_ENOxwdqlyju3ys/exec">
       <div class="col-xs-12">
-        <h1>Please help us survive the future.</h1>
+        <h2>Please help us survive the future.</h2>
         <h3>What three skills or tools would you take with you to survive the future of capitalism?</h3>        
         <input name="essential1" type="text" class="feedback-input" placeholder="must have" required/>
         <input name="essential2" type="text" class="feedback-input" placeholder="must have" required/>
@@ -105,6 +111,7 @@
       <p class="credit-footer"><em>Mala Onda</em> was commissioned by Temporary Art Review for <a href="http://commonfield.org/convenings/2016" target="_blank">Common Field Convening 2016 | Miami</a> from October 23-25, 2016. The project was embedded in an essay by theorist and curator Joshua Simon published on <a href="http://temporaryartreview.com/the-dual-power-of-arts-organizations/" target="_blank">temporaryartreview.com</a> and on <a href="http://commonfield.org/projects" target="_blank">Common Field | Research</a> and was part of a broader segment on the impacts of accelerated capitalism.</p>
     </div>
   </div>
+@@include('../partials/_footer.html')  
 </div>
 <!--END: MAIN CONTENT-->
 
