--- a/templates/performativeremoval.html
+++ b/templates/performativeremoval.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anxious to Commission a Performative Removal</title>
+    <title>Anxious to Commission a Performative Removal | Anxious to Make</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,28 +25,47 @@
   <!--START: MAIN CONTENT-->
   <div class="container main-content">
     <div class="row">
-      <!--main content header-->
-      <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-        <h1 class="pageheading">Commission a Performative Removal of Creative Block</h1>
+      <div class="col-xs-12 col-sm-8">
+        <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em class="negative">Commission a Performative<br/>Removal of Creative Block</em></h1>
       </div>
-      <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
+      <div class="hidden-xs col-sm-4">
         <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
       </div>
     </div>
+  
     <div class="row">
-      <!--sample goes here-->
       <div class="col-xs-12 col-sm-8">
-          <h1 class="title">Watch ours!</h1>
-          <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153587417?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>       
+        <div class="row">
+          <div class="col-xs-12">
+              <h1 class="title">Watch ours!</h1>
+              <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153587417?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              </div>       
+          </div>
+          <div class="col-xs-12">
+
+              <h1 class="title">Make Your Own</h1>
+              <div class="col-xs-12 col-sm-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/vacoid/burn-a-cigarette-with-your-message-on-it" target="_blank">I will burn a cigarette with your message on it</a>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/socalchrist/have-jesus-himself-praise-your-business-via-hd-video" target="_blank">I will have Jesus himself praise your business via HD Video</a>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/pranichealingca/perform-a-distance-pranic-healing" target="_blank">I will perform a chakra balancing and aura cleanse</a>
+              </div>
+
+          </div>
+        </div> 
       </div>
-      <!--script or text goes here-->
-      <div class="col-xs-12 col-sm-4 col-md-4">
-          <p class="title">Are you blocked?</p>
+      <div class="col-xs-12 col-sm-4">
+          <p class="title">Write Scripts</p>
           <div class="clipvertical-wrapper">
           <div class="clipvertical">    
-              <p class="script">SCRIPT<br/><br/>Hey, this is the Doc. 
+              <p class="script"><br/>Hey, this is the Doc. 
               <br/><br/>
               I have your dirty creative block all over me, that’s why I’m in the shower. 
               I’m washing it off right now. 
@@ -67,27 +86,8 @@
           </div>
           <p class="credit">Commissioned from: <a href="https://www.fiverr.com/docbeaker/say-anything-you-want-while-in-the-shower" target="_blank">I will say anything you want while in the shower</a></p>
       </div> 
-      <!--three additional examples go here-->
-      <div class="col-xs-12 col-sm-8">
-          <h1 class="title">Make Your Own</h1>
-              <div class="col-xs-4">
-                  <span class="recommendation">We recommend:<br/></span> 
-                  <a href="https://www.fiverr.com/vacoid/burn-a-cigarette-with-your-message-on-it" target="_blank">I will burn a cigarette with your message on it</a>
-              </div>
-              <div class="col-xs-4">
-                  <span class="recommendation">We recommend:<br/></span> 
-                  <a href="https://www.fiverr.com/socalchrist/have-jesus-himself-praise-your-business-via-hd-video" target="_blank">I will have Jesus himself praise your business via HD Video</a>
-              </div>
-              <div class="col-xs-4">
-                  <span class="recommendation">We recommend:<br/></span> 
-                  <a href="https://www.fiverr.com/pranichealingca/perform-a-distance-pranic-healing" target="_blank">I will perform a chakra balancing and aura cleanse</a>
-              </div>
-          </div>
-      </div> 
-
-
-
   </div><!--end row-->
+  @@include('../partials/_footer.html')
 </div><!--end container-->
 <!--END: MAIN CONTENT-->
 
