--- a/templates/quizzes.html
+++ b/templates/quizzes.html
@@ -25,9 +25,9 @@
 @@include('../partials/_header.html')
 
     <!--START: MAIN CONTENT-->
-    <div class="container">
+    <div class="container main-content">
         <div class="row">
-          <h1 class="title">Our Quizzes and Surveys</h1>
+        <h1 class="title shake-slow shake-constant shake-constant--hover"><span class="negative">Our Quizzes and Surveys</span></h1>
           <div class="col-xs-6 col-sm-4 document question">
             <a href="moneyquiz.html">
             <img src="img/quiz.jpg" class="img-responsive" alt="Would Money Be All I Really Need to Succeed?"><span>Would Money Be All I Really Need to Succeed?</span></a>
@@ -41,6 +41,7 @@
             <img src="img/quiz.jpg" class="img-responsive" alt="Important Research: A Guide for Surviving Post-Capitalism's Black Magic Vortex"><span>Important Research: <em>A Guide for Surviving Post-Capitalism's Black Magic Vortex</em> Survey</span></a>
           </div>
         </div>
+        @@include('../partials/_footer.html')
     </div>
     <!--END: MAIN CONTENT-->
 
