--- a/templates/timemanagement.html
+++ b/templates/timemanagement.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anxious to Commission a Custom Audio Track for Time Management</title>
+    <title>Commission a Custom Audio Track for Time Management | Anxious to Make</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,8 +10,24 @@
     <meta name="author" content="Liat Berdugo and Emily Martinez">
     <meta name='description' content='Anxious to Make Custom Audio Track for Time Management'>
     <meta name='keywords' content='unfamiliar materials, validation'>
-    
-@@include('../partials/_social.html')
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Custom Audio Track for Time Management | Anxious to Make" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.anxioustomake.ga/timemanagement.html" />
+    <meta property="og:image" content="http://anxioustomake.ga/img/meta-time.png" />
+    <meta property="og:description" content='Improve performance with the custom audio track for time management.' /> 
+    <meta property="og:site_name" content="Anxious to Make" />
+    <meta property="fb:admins" content="753667636" />
+
+    <!--Twitter Meta-->
+    <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
+    <meta name="twitter:site" content="@anxioustomake" />
+    <meta name="twitter:title" content="Anxious to Make">
+    <meta name="twitter:description" content='Anxious to Make Custom Audio Track for Time Management'>
+    <meta name="twitter:creator" content="@anxioustomake ">
+    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-time.png">
+
 @@include('../partials/_css.html')
 </head>
 
@@ -25,58 +41,58 @@
   <!--START: MAIN CONTENT-->
   <div class="container main-content">
     <div class="row">
-      <!--main content header-->
-      <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
+      <div class="col-xs-12 col-sm-8">
+        <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Commission a Custom Audio Track for Motivation</em></h1>
+      </div>
+        <div class="hidden-xs col-sm-4">
         <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
       </div>
-      <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-        <h1 class="pageheading">Commission a Custom Audio Track for Motivation</h1>
-      </div>
     </div>
+
     <div class="row">
-        <!--script or text goes here-->
-        <div class="col-xs-12 col-sm-4 col-md-4">
-            <p class="title"><strong>Improve Performance</strong></p>
-            <div class="clipvertical-wrapper">
-            <div class="clipvertical">    
-                <p class="script">SCRIPT<br/><br/>
-                “anxious to make” custom audio track for time management.<br/><br/> 
-                (note: say “anxious to make” as if it is a brand, and you are announcing it, proudly!)
-                <br/><br/>
-                i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. </p>
-            </div>   
-            </div>
-            <p class="credit">Commissioned from: <a href="https://www.fiverr.com/flexvocals/record-a-250-word-voice-over-in-american-english" target="_blank">I will create your Pro voice over Today</a></p>
+      <div class="col-xs-12 col-sm-8">
+        <div class="row">
+          <div class="col-xs-12">
+              <h1 class="title">Listen to ours!</h1>
+              <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153562705?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              </div>       
+          </div>
+          <div class="col-xs-12">
+              <h1 class="title">Make Your Own</h1>
+              <div class="row">
+                  <div class="col-xs-12 col-sm-4">
+                      <span class="recommendation">We recommend:<br/></span> 
+                      <a href="https://www.fiverr.com/treeoflife/create-motivational-audio-file-personalized-mind-cleanse" target="_blank">I will voice motivational mantras, personalized mind cleanse</a>
+                  </div>
+                  <div class="col-xs-12 col-sm-4">
+                      <span class="recommendation">We recommend:<br/></span> 
+                      <a href="https://www.fiverr.com/esthergoh/do-a-voiceover-in-singaporean-accent-days-to-deliver-depending-on-the-pages" target="_blank">I will do a voiceover in Singaporean accent</a>
+                  </div>
+                  <div class="col-xs-12 col-sm-4">
+                      <span class="recommendation">We recommend:<br/></span> 
+                      <a href="https://www.fiverr.com/jjvotn/voice-anything-you-want-in-an-epicdeep-evil-voice" target="_blank">I will voice anything you want in an epic or deep evil voice</a>
+                  </div>
+              </div>
+          </div>
         </div>
-
-         <!--sample goes here-->
-        <div class="col-xs-12 col-sm-8">
-            <h1 class="title">Listen to ours!</h1>
-            <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153562705?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>       
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <p class="title"><strong>Improve Performance</strong></p>
+        <div class="clipvertical-wrapper">
+          <div class="clipvertical">    
+              <p class="script">SCRIPT<br/><br/>
+              “anxious to make” custom audio track for time management.<br/><br/> 
+              (note: say “anxious to make” as if it is a brand, and you are announcing it, proudly!)
+              <br/><br/>
+              i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. i will do this now. </p>
+          </div>   
         </div>
-
-        <!--three additional examples go here-->
-        <div class="col-xs-12 col-sm-8">
-            <h1 class="title">Make Your Own</h1>
-            <div class="row">
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/treeoflife/create-motivational-audio-file-personalized-mind-cleanse" target="_blank">I will voice motivational mantras, personalized mind cleanse</a>
-                </div>
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/esthergoh/do-a-voiceover-in-singaporean-accent-days-to-deliver-depending-on-the-pages" target="_blank">I will do a voiceover in Singaporean accent</a>
-                </div>
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/jjvotn/voice-anything-you-want-in-an-epicdeep-evil-voice" target="_blank">I will voice anything you want in an epic or deep evil voice</a>
-                </div>
-            </div>
-        </div>  
+        <p class="credit">Commissioned from: <a href="https://www.fiverr.com/flexvocals/record-a-250-word-voice-over-in-american-english" target="_blank">I will create your Pro voice over Today</a></p>
+      </div>      
 
     </div><!--end row-->
+  @@include('../partials/_footer.html')  
   </div><!--end container-->
 <!--END: MAIN CONTENT-->
 
